--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿@using Microsoft.AspNetCore.Identity;
+﻿@using APIs.Steam
+@using Microsoft.AspNetCore.Identity;
 @using Microsoft.Extensions.Caching.Memory;
 @using pepeizqs_deals_web.Areas.Identity.Data;
 
@@ -42,14 +43,81 @@
         
         if (usuario != null)
         {
+            if (usuario != null)
+            {
+                if (usuario.EmailConfirmed == true && string.IsNullOrEmpty(usuario.SteamAccount) == false && string.IsNullOrEmpty(usuario.SteamAccountLastCheck) == false)
+                {
+                    bool tiempo = true;
+
+                    if (string.IsNullOrEmpty(usuario.SteamAccountLastCheck) == false)
+                    {
+                        if (Convert.ToDateTime(usuario.SteamAccountLastCheck) + TimeSpan.FromDays(7) > DateTime.Now)
+                        {
+                            tiempo = false;
+                        }
+                    }
+
+                    if (tiempo == true)
+                    {
+                        SteamUsuario datos = await APIs.Steam.Cuenta.CargarDatos(usuario.SteamAccount);
+
+                        usuario.SteamGames = datos.Juegos;
+                        usuario.SteamWishlist = datos.Deseados;
+                        usuario.Avatar = datos.Avatar;
+                        usuario.Nickname = datos.Nombre;
+                        usuario.SteamAccountLastCheck = DateTime.Now.ToString();
+                        usuario.OfficialGroup = datos.GrupoPremium;
+                        usuario.OfficialGroup2 = datos.GrupoNormal;
+                    }
+                    else
+                    {
+                        if (string.IsNullOrEmpty(usuario.RewardsLastLogin) == true)
+                        {
+                            if (Herramientas.Listados.Generar(usuario.SteamGames).Count() > 50)
+                            {
+                                usuario.RewardsLastLogin = DateTime.Now.ToString();
+                                usuario.RewardsCoins = 1;
+
+                                global::BaseDatos.Recompensas.Historial.Insertar(usuario.Id, 1, "Daily", DateTime.Now);
+                            }
+                        }
+                        else
+                        {
+                            if (usuario.RewardsCoins < 30)
+                            {
+                                if (Convert.ToDateTime(usuario.RewardsLastLogin).DayOfYear != DateTime.Now.DayOfYear)
+                                {
+                                    if (Herramientas.Listados.Generar(usuario.SteamGames).Count() > 50)
+                                    {
+                                        usuario.RewardsLastLogin = DateTime.Now.ToString();
+                                        usuario.RewardsCoins = usuario.RewardsCoins + 1;
+
+                                        global::BaseDatos.Recompensas.Historial.Insertar(usuario.Id, 1, "Daily", DateTime.Now);
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+
+                if (string.IsNullOrEmpty(idioma) == false)
+                {
+                    usuario.Language = idioma;
+                }
+
+                try
+                {
+                    await UserManager.UpdateAsync(usuario);
+                }
+                catch { }
+            }
+
             if (BaseDatos.Usuarios.Buscar.RolDios(usuario.UserName) == true)
             {
                 adminLogeado = true;
             }
         }    
     }
-
-    string ubicacionEnlace = Context.Request.Path;
 }
 
 <!DOCTYPE html>
@@ -93,7 +161,7 @@
                     usuarioNombre = usuario?.Nickname,
                     usuarioEmail = usuario?.Email,
                     usuarioCoins = usuario?.RewardsCoins,
-                    ubicacionEnlace = ubicacionEnlace
+                    ubicacionEnlace = Context.Request.Path.ToString()
                 }))
             </div>
         </nav>
