--- a/pepeizqs deals web/Pages/publisher.cshtml
+++ b/pepeizqs deals web/Pages/publisher.cshtml
@@ -48,69 +48,70 @@
 
     ViewData["Title"] = titulo;
     Layout = "/Pages/Shared/_Layout.cshtml";
-}
 
-@if (usuarioLogeado == true)
-{
-    if (adminLogeado == true)
+    if (usuarioLogeado == true)
     {
-        @(await Html.RenderComponentAsync<Componentes.Admin.Publisher>(RenderMode.Server, new
+        if (adminLogeado == true)
         {
-            id = Model.id
-        }))
+            @(await Html.RenderComponentAsync<Componentes.Admin.Publisher>(RenderMode.Server, new
+            {
+                id = Model.id
+            }))
+        }
     }
-}
 
-@if (Model.publisher != null)
-{
-    @(await Html.RenderComponentAsync<Componentes.Secciones.Seo>(RenderMode.ServerPrerendered, new
+    if (Model.publisher != null)
     {
-        idioma = Model.idioma,
-        titulo = titulo,
-        enlace = enlace,
-        canonical = enlace,
-        descripcion = Model.publisher.Descripcion,
-        imagen = Model.publisher.Imagen
-    }))
+        bool seo = false;
+        string? userAgent = string.Empty;
 
-	bool prerenderizado = false;
-	string userAgent = string.Empty;
-
-	if (HttpContext != null)
-	{
-		userAgent = HttpContext.Request.Headers.UserAgent;
-
-		if (string.IsNullOrEmpty(userAgent) == false)
-		{
-			if (userAgent.Contains("http://www.google.com/bot.html") == true || userAgent.Contains("http://www.bing.com/bingbot.htm") == true)
-			{
-				prerenderizado = true;
-			}
-		}
-	}
-
-	if (prerenderizado == true)
-	{
-        @(await Html.RenderComponentAsync<Componentes.Secciones.Publisher>(RenderMode.ServerPrerendered, new
+        if (HttpContext != null)
         {
-            idioma = Model.idioma,
-            id = Model.publisher.Id,
-            nombre = Model.publisher.Nombre,
-            descripcion = Model.publisher.Descripcion,
-            imagen = Model.publisher.Imagen,
-            acepciones = Model.publisher.Acepciones
-        }))
-	}
-	else
-	{
-        @(await Html.RenderComponentAsync<Componentes.Secciones.Publisher>(RenderMode.Server, new
+            userAgent = HttpContext.Request.Headers.UserAgent;
+
+            if (string.IsNullOrEmpty(userAgent) == false)
+            {
+                if (userAgent.Contains("http://www.google.com/bot.html") == true || userAgent.Contains("http://www.bing.com/bingbot.htm") == true)
+                {
+                    seo = true;
+                }
+            }
+        }
+
+        if (seo == true)
         {
-            idioma = Model.idioma,
-            id = Model.publisher.Id,
-            nombre = Model.publisher.Nombre,
-            descripcion = Model.publisher.Descripcion,
-            imagen = Model.publisher.Imagen,
-            acepciones = Model.publisher.Acepciones
-        }))
-	}
+            @(await Html.RenderComponentAsync<Componentes.Secciones.Seo>(RenderMode.ServerPrerendered, new
+            {
+                idioma = Model.idioma,
+                titulo = titulo,
+                enlace = enlace,
+                canonical = enlace,
+                descripcion = Model.publisher.Descripcion,
+                imagen = Model.publisher.Imagen
+            }))
+
+            @(await Html.RenderComponentAsync<Componentes.Secciones.Publisher>(RenderMode.ServerPrerendered, new
+            {
+                idioma = Model.idioma,
+                id = Model.publisher.Id,
+                nombre = Model.publisher.Nombre,
+                descripcion = Model.publisher.Descripcion,
+                imagen = Model.publisher.Imagen,
+                acepciones = Model.publisher.Acepciones
+            }))
+        }
+        else
+        {
+            @(await Html.RenderComponentAsync<Componentes.Secciones.Publisher>(RenderMode.Server, new
+            {
+                idioma = Model.idioma,
+                usuario = usuario,
+                id = Model.publisher.Id,
+                nombre = Model.publisher.Nombre,
+                descripcion = Model.publisher.Descripcion,
+                imagen = Model.publisher.Imagen,
+                acepciones = Model.publisher.Acepciones
+            }))
+        }
+    }
 }
