--- a/pepeizqs deals web/Pages/Free.cshtml
+++ b/pepeizqs deals web/Pages/Free.cshtml
@@ -1,11 +1,28 @@
 ﻿@page
+
+@using Microsoft.AspNetCore.Identity
+@using pepeizqs_deals_web.Areas.Identity.Data
+
 @model pepeizqs_deals_web.Pages.FreeModel
 
+@inject SignInManager<Usuario> SignInManager
+@inject UserManager<Usuario> UserManager
+
 @{
+    #nullable disable
+
     string titulo = Herramientas.Idiomas.CogerCadena(Model.idioma, "Title", "Free");
 
     ViewData["Title"] = titulo;
     Layout = "/Pages/Shared/_Layout.cshtml";
+
+    bool usuarioLogeado = SignInManager.IsSignedIn(User);
+    Usuario usuario = new Usuario();
+
+    if (usuarioLogeado == true)
+    {
+        usuario = await UserManager.GetUserAsync(User);
+    }
 
     List<Juegos.JuegoGratis> juegosActuales = new List<Juegos.JuegoGratis>();
     List<Juegos.JuegoGratis> juegosTodos = BaseDatos.Gratis.Buscar.Actuales();
@@ -104,19 +121,8 @@
     string descripcion = Herramientas.Idiomas.CogerCadena(Model.idioma, "String11", "Free");
 
     string enlace = "https://pepeizqdeals.com/free/";
-}
 
-@(await Html.RenderComponentAsync<Componentes.Secciones.Seo>(RenderMode.ServerPrerendered, new
-{
-	idioma = Model.idioma,
-	titulo = titulo,
-	enlace = enlace,
-	canonical = enlace,
-	descripcion = descripcion
-}))
-
-@{
-    bool prerenderizado = false;
+    bool seo = false;
     string userAgent = string.Empty;
 
     if (HttpContext != null)
@@ -127,23 +133,33 @@
         {
             if (userAgent.Contains("http://www.google.com/bot.html") == true || userAgent.Contains("http://www.bing.com/bingbot.htm") == true)
             {
-                prerenderizado = true;
+                seo = true;
             }
         }
     }
 
-    if (prerenderizado == true)
+    if (seo == true)
     {
+        @(await Html.RenderComponentAsync<Componentes.Secciones.Seo>(RenderMode.ServerPrerendered, new
+        {
+            idioma = Model.idioma,
+            titulo = titulo,
+            enlace = enlace,
+            canonical = enlace,
+            descripcion = descripcion
+        }))
+
         @(await Html.RenderComponentAsync<Componentes.Secciones.Gratis>(RenderMode.ServerPrerendered, new
         {
-            idioma = @Model.idioma
+            idioma = Model.idioma
         }))
     }
     else
     {
         @(await Html.RenderComponentAsync<Componentes.Secciones.Gratis>(RenderMode.Server, new
         {
-            idioma = @Model.idioma
+            idioma = Model.idioma,
+            usuario = usuario
         }))
     }
 }
