--- a/pepeizqs deals web/Pages/Index.cshtml
+++ b/pepeizqs deals web/Pages/Index.cshtml
@@ -1,5 +1,12 @@
 ﻿@page
+
+@using Microsoft.AspNetCore.Identity
+@using pepeizqs_deals_web.Areas.Identity.Data
+
 @model IndexModel
+
+@inject SignInManager<Usuario> SignInManager
+@inject UserManager<Usuario> UserManager
 
 @{
 	string titulo = "pepeizq's deals • " + Herramientas.Idiomas.CogerCadena(Model.idioma, "Subtitle", "Index");
@@ -10,11 +17,17 @@
 	string descripcion = Herramientas.Idiomas.CogerCadena(Model.idioma, "Subtitle", "Index");
 
 	string enlace = "https://pepeizqdeals.com";
-}
 
-@{
-	bool prerenderizado = false;
-	string userAgent = string.Empty;
+	bool usuarioLogeado = SignInManager.IsSignedIn(User);
+	Usuario? usuario = new Usuario();
+
+	if (usuarioLogeado == true)
+	{
+		usuario = await UserManager.GetUserAsync(User);
+	}
+
+	bool seo = false;
+	string? userAgent = string.Empty;
 
 	if (HttpContext != null)
 	{
@@ -24,12 +37,12 @@
 		{
 			if (userAgent.Contains("http://www.google.com/bot.html") == true || userAgent.Contains("http://www.bing.com/bingbot.htm") == true)
 			{
-				prerenderizado = true;
+				seo = true;
 			}
 		}
 	}
 
-	if (prerenderizado == true)
+	if (seo == true)
 	{
 		@(await Html.RenderComponentAsync<Componentes.Secciones.Seo>(RenderMode.ServerPrerendered, new
 		{
@@ -49,7 +62,8 @@
 	{
 		@(await Html.RenderComponentAsync<Componentes.Secciones.Portada>(RenderMode.Server, new
 		{
-			idioma = Model.idioma
+			idioma = Model.idioma,
+			usuario = usuario
 		}))
 	}
 }
